--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -7,7 +7,7 @@
     <a class="logout-link" href="/admUsers">Gestión de roles</a>
     <a class="logout-link" href="/mockingproducts">Faker</a>
     <a class="logout-link" href="/purcharser">Order</a>
-    <a class="logout-link" href="/api/docs">Desarrolladores</a>
+    <a class="logout-link" href="/api/docs" target="_blank" rel="noopener noreferrer">Desarrolladores</a>
     <a class="logout-link" href="/carts/{{cart._id}}"><i class="fas fa-shopping-cart"></i></a>
     <form method="post" action="/api/users/logout">
         <button class="logout-link" type="submit">Cerrar Sesión</button>
