--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -7,7 +7,7 @@
     <a class="logout-link" href="/realTimeProducts">Subir productos</a>
     <a class="logout-link" href="/purcharser">Order</a>
     <a class="logout-link" href="/mockingproducts">Faker</a>
-    <a class="logout-link" href="/api/docs">Desarrolladores</a>
+    <a class="logout-link" href="/api/docs" target="_blank" rel="noopener noreferrer">Desarrolladores</a>
     <form method="post" action="/api/users/logout">
         <button class="logout-link" type="submit">Cerrar Sesión</button>
     </form>
