--- a/src/views/uploadDocuments.handlebars
+++ b/src/views/uploadDocuments.handlebars
@@ -1,5 +1,4 @@
 <div class="containerHome">
-    <h1>{{user.first_name}} {{user.username}} </h1>
     <a class="logout-link" href="/">Inicio</a>
     <a class="logout-link" href="/products">Productos</a>
     <a class="logout-link" href="/chat">Contáctanos </a>
@@ -7,7 +6,7 @@
     <a class="logout-link" href="/admUsers">Gestión de roles</a>
     <a class="logout-link" href="/purcharser">Order</a>
     <a class="logout-link" href="/mockingproducts">Faker</a>
-    <a class="logout-link" href="/api/docs">Desarrolladores</a>
+    <a class="logout-link" href="/api/docs" target="_blank" rel="noopener noreferrer">Desarrolladores</a>
     <form method="post" action="/api/users/logout">
         <button class="logout-link" type="submit">Cerrar Sesión</button>
     </form>
@@ -15,23 +14,24 @@
 <hr>
 <div>
     <h1>Upload Documents</h1>
-   <form class="box" id="uploadForm" action="/api/users/{{user._id}}/documents" method="post" enctype="multipart/form-data">
-    <label for="docs">Subir Documentos:</label>
-    <input type="file" name="docs" id="docs" multiple />
-    <br>
-    <span id="error-message" class="error-message">Debes subir al menos 3 archivos.</span>
-    <br>
-    <p id="info-message" class="info-message">
-        Para actualizar a premium, necesitas subir los siguientes documentos:
+    <form class="box" id="uploadForm" action="/api/users/{{user._id}}/documents" method="post"
+        enctype="multipart/form-data">
+        <label for="docs">Subir Documentos:</label>
+        <input type="file" name="docs" id="docs" multiple />
+        <br>
+        <span id="error-message" class="error-message">Debes subir al menos 3 archivos.</span>
+        <br>
+        <p id="info-message" class="info-message">
+            Para actualizar a premium, necesitas subir los siguientes documentos:
         <ul>
             <li>Identificación</li>
             <li>Prueba de Domicilio</li>
             <li>Comprobante de Estado de Cuenta Bancario</li>
         </ul>
         Después de subir los documentos, por favor, vuelve a iniciar sesión para completar el proceso.
-    </p>
-    <button class="btnP" type="submit">Subir</button>
-</form>
+        </p>
+        <button class="btnP" type="submit">Subir</button>
+    </form>
 
 
-<script src="/js/fileUploadHandler.js"></script>
+    <script src="/js/fileUploadHandler.js"></script>
