--- a/public/css/index.css
+++ b/public/css/index.css
@@ -37,9 +37,9 @@ hr {
 }
 
 .img1 {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
+    width: 100%;
+    height: 300px;
+    object-fit:contain;
     display: flex;
     align-items: center;
     justify-content: center;
