--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -18,15 +18,14 @@
 <div>
     {{#each product}}
     {{#if this.description}}
-    <h1>Producto: {{this.title}}</h1>
     <div class="box">
         <div class="products">
             <h2 class="linea">{{this.title}}</h2>
             <p>Description: {{this.description}}</p>
-            <p>Precio: {{this.price}}</p>
-            <p>Code: {{this.code}}</p>
+            <p>Precio: ${{this.price}}</p>
             <p>Category: {{this.category}}</p>
             <p>Cantidad: {{this.stock}}</p>
+            <img class="img1" src="/img/{{this.thumbnail}}" alt="{{../this.description}}">
             <!-- Añadir campo de entrada para cantidad
             <input type="number" class="quantity" min="1" value="1" data-productid="{{this._id}}"> -->
             <!-- Incluye el cartId y el userId en los atributos data del botón -->
