--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -24,7 +24,7 @@
 <div>
     <div class="container">
         {{#each cart.products}}
-        <div class="products">
+        <div class="productsFaker">
             <p>Producto: {{this.product.title}}</p>
             <p>Descripción: {{this.product.description}}</p>
             <p>Precio: {{this.product.price}}</p>
