--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -39,7 +39,7 @@
             <img class="img1" src="/img/{{this}}" alt="{{../this.description}}">
             {{/each}}
         </div>
-        <p>Precio: ${{this.price}}</p>
+        <p class="p">Precio: ${{this.price}}</p>
         <a href="/products/{{this._id}}" class="detail-link">
             <button class="btnP" type="button" data-userid="{{user._id}}">Ver Detalles</button>
         </a>
