--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -48,7 +48,7 @@
     <h1>Listado de Productos en Tiempo Real</h1>
     <div class="container" id="listaProductos">
         {{#each products}}
-        <div class="products">
+        <div  class="productsFaker">
             <h2 class="linea">{{this.title}}</h2>
             <p>Descripción: {{this.description}}</p>
             <p>Precio: $ {{this.price}}</p>
