--- a/src/views/ticket.handlebars
+++ b/src/views/ticket.handlebars
@@ -15,7 +15,7 @@
                 <li>
                     <p><strong>Nombre:</strong> {{this.title}}</p>
                     <p><strong>Descripción:</strong> {{this.description}}</p>
-                    <p><strong>Precio:</strong> ${{this.price}}</p>
+                    <p class="p"><strong>Precio:</strong> ${{this.price}}</p>
                     <p><strong>Stock:</strong> {{this.stock}}</p>
                 </li>
             {{/each}}
