--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -19,16 +19,13 @@
     {{#each product}}
     {{#if this.description}}
     <div class="box">
-        <div class="products">
+        <div class="productsFaker">
             <h2 class="linea">{{this.title}}</h2>
-            <p>Description: {{this.description}}</p>
-            <p>Precio: ${{this.price}}</p>
-            <p>Category: {{this.category}}</p>
-            <p>Cantidad: {{this.stock}}</p>
+            <p>Descripcion: {{this.description}}</p>
+            <p>Categoria: {{this.category}}</p>
+            <p>Cantidad en stock: {{this.stock}}</p>
             <img class="img1" src="/img/{{this.thumbnail}}" alt="{{../this.description}}">
-            <!-- Añadir campo de entrada para cantidad
-            <input type="number" class="quantity" min="1" value="1" data-productid="{{this._id}}"> -->
-            <!-- Incluye el cartId y el userId en los atributos data del botón -->
+            <p class="p">Precio: ${{this.price}}</p>
             <button class="success agregar" type="submit" data-productid="{{this._id}}" data-cartid="{{../user.cart}}"
                 data-userid="{{../user._id}}" data-stock="{{this.stock}}">
                 Agregar al carrito
