--- a/src/views/uploadDocuments.handlebars
+++ b/src/views/uploadDocuments.handlebars
@@ -16,8 +16,12 @@
     <br>
     <br>
     <h1>Upload Documents</h1>
-    <form class="box" id="uploadForm" action="/api/users/{{user._id}}/documents" method="post"
-        enctype="multipart/form-data">
+    {{!-- <form class="box" id="uploadForm" action="/api/users/{{user._id}}/documents" method="post"
+        enctype="multipart/form-data"> --}}
+        <form class="box" id="uploadForm" action="https://backend-coder-va89.onrender.com/api/users/{{user._id}}/documents" method="post" enctype="multipart/form-data">
+    <!-- campos del formulario -->
+</form>
+
         <label for="docs">Subir Documentos:</label>
         <input type="file" name="docs" id="docs" multiple />
         <br>
