--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,8 +2,7 @@
     <a class="logout-link" href="/">Inicio</a>
     <a class="logout-link" href="/products">Productos</a>
     <a class="logout-link" href="/chat">Contáctanos</a>
-    {{!-- <a class="logout-link" href="/uploadDocuments">Subir documentos</a> --}}
-     <a class="logout-link" href="/uploadDocuments/{{user._id}}/documents">Subir documentos</a>
+    <a class="logout-link" href="/uploadDocuments">Subir documentos</a>
     <a class="logout-link" href="/realTimeProducts">Subir productos</a>
     <a class="logout-link" href="/admUsers">Gestión de roles</a>
     <a class="logout-link" href="/mockingproducts">Faker</a>
